--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ kbd {
 
 <h2 id="toc_0">Raymond Vozzo&#39;s Homepage</h2>
 
-<p><img style="float: right;" src="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/image_1md.jpg"></p>
+<p><img style="float: right;" src="http://raymondvozzo.github.io/Files/image_1md.jpg"></p>
 
 <table>
 <thead>
@@ -363,7 +363,7 @@ kbd {
 </tbody>
 </table>
 
-<p>I am a Scholarly Teaching Fellow at the University of Adelaide.</p>
+<p>I am a Senior Lecturer at the University of Adelaide (soon to be Adelaide University!).</p>
 
 <p>I’m interested in differential geometry and mathematical physics. In particular, my research has been focussed on bundle gerbes and infinite-dimensional geometry, and applications to quantum field theory and string theory.</p>
 
@@ -375,8 +375,8 @@ kbd {
 
 <ul>
 <li>My recent <a href="http://www.ams.org/mathscinet/search/publications.html?pg1=INDI&amp;s1=900954">papers</a> on MathSciNet (subscription required)</li>
-<li>My recent <a href="https://arxiv.org/a/vozzo_r_1.html">preprints</a> on the arXiv</li>
-<li>A copy of my <a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/CV.pdf">CV</a></li>
+<li>My recent <a href="https://arxiv.org/a/vozzo_r_1.html">preprints</a> on the arXiv
+<!--+ A copy of my [CV](http://www.maths.adelaide.edu.au/raymond.vozzo/Files/CV.pdf)--></li>
 <li>Back to the <a href="http://www.maths.adelaide.edu.au">School of Mathematical Sciences</a></li>
 <li>Some of the expository tools I have created using Geogebra:
 
@@ -414,52 +414,52 @@ kbd {
 <td><a href="https://arxiv.org/abs/1905.06041">arXiv:1905.06041</a> <br> <a href="https://doi.org/10.1007/s00220-020-03831-z">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Real_bundle_gerbes_2019.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Real_bundle_gerbes_2019.pdf">pdf</a></td>
 <td><strong>Real bundle gerbes, orientifolds and twisted KR-homology</strong><br>(with P. Hekmati, M.K. Murray &amp; R.J. Szabo)<br><em>Adv. Theor. Math. Phys.</em> <strong>23</strong>(8) (2019), pp. 2093-2159.</td>
 <td><a href="http://arxiv.org/abs/1608.06466">arXiv:1608.06466</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Smooth_loop_stacks_2018.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Smooth_loop_stacks_2018.pdf">pdf</a></td>
 <td><strong>Smooth loop stacks of differentiable stacks and gerbes</strong><br>(with D.M. Roberts)<br><em>Cah. Topol. Géom. Différ. Catég.</em> Vol LIX no 2 (2018) pp 95-141.</td>
 <td><a href="http://arxiv.org/abs/1602.07973">arXiv:1602.07973</a><br> <a href="http://cahierstgdc.com/index.php/volume-lix-2018/">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Equivariant_bundle_Gerbes_2017.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Equivariant_bundle_Gerbes_2017.pdf">pdf</a></td>
 <td><strong>Equivariant bundle gerbes</strong><br> (with M.K. Murray, D. Stevenson &amp; D.M. Roberts)<br><em>Adv. Theor. Math. Phys.</em> <strong>21</strong>(4) (2017), pp. 921-975.</td>
 <td><a href="http://arxiv.org/abs/1506.07931">arXiv:1506.07931</a><br> <a href="http://dx.doi.org/10.4310/ATMP.2017.v21.n4.a3">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Smooth_hom_stack_2018.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Smooth_hom_stack_2018.pdf">pdf</a></td>
 <td><strong>The smooth Hom-stack of an orbifold</strong><br>(with D.M. Roberts)<br>n: Wood D., de Gier J., Praeger C., Tao T. (eds) 2016 MATRIX Annals. MATRIX Book Series, vol 1. Springer, pp.43-47.</td>
 <td><a href="http://arxiv.org/abs/1610.05904">arXiv:1610.05904</a><br> <a href="https://doi.org/10.1007/978-3-319-72299-3_3">book series</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Odd_diff_K_2015.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Odd_diff_K_2015.pdf">pdf</a></td>
 <td><strong>A Geometric Model for Odd Differential K-theory</strong><br> (with P. Hekmati, M.K. Murray &amp; V. Schlegel)<br><em>Differential Geom. Appl.</em> <strong>40</strong> (2015), pp. 123-158.</td>
 <td><a href="http://arxiv.org/abs/1309.2834">arXiv:1309.2834</a><br> <a href="http://dx.doi.org/10.1016/j.difgeo.2015.02.001">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/FMS_2013.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/FMS_2013.pdf">pdf</a></td>
 <td><strong>The Faddeev-Mickelsson-Shatashvili anomaly and lifting bundle gerbes</strong><br>(with P. Hekmati, M.K. Murray &amp; D. Stevenson)<br> <em>Comm. Math. Phys.</em> <strong>319</strong>(2) (2013), pp. 379-393.</td>
 <td><a href="http://arxiv.org/abs/1112.1752">arXiv:1112.1752</a><br> <a href="http://dx.doi.org/10.1007/s00220-012-1608-7">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/General_caloron_2012.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/General_caloron_2012.pdf">pdf</a></td>
 <td><strong>The general caloron correspondence</strong><br> (with P. Hekmati &amp; M.K. Murray,)<br> <em>J. Geom. Phys.</em> <strong>62</strong>(2) (2012), pp. 224-241.</td>
 <td><a href="http://arxiv.org/abs/1105.0805">arXiv:1105.0805</a><br> <a href="http://dx.doi.org/10.1016/j.geomphys.2011.10.015">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Equivariant_cohomology_2011.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Equivariant_cohomology_2011.pdf">pdf</a></td>
 <td><strong>Loop groups, string classes and equivariant cohomology</strong><br> <em>J. Aust. Math. Soc.</em> <strong>90</strong>(1) (2011), pp. 109-127.</td>
 <td><a href="http://arxiv.org/abs/1005.4243">arXiv:1005.4243</a><br> <a href="http://dx.doi.org/10.1017/S1446788711001066">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Circle_actions_2010.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Circle_actions_2010.pdf">pdf</a></td>
 <td><strong>Circle actions, central extensions and string structures</strong><br> (with M.K. Murray)<br> <em>Int. J. Geom. Methods Mod. Phys.</em> <strong>7</strong>(6) (2010), pp. 1065-1092.</td>
 <td><a href="http://arxiv.org/abs/1004.0779">arXiv:1004.0779</a><br> <a href="http://dx.doi.org/10.1142/S0219887810004725">journal</a></td>
 </tr>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Caloron_correspondence_2010.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Caloron_correspondence_2010.pdf">pdf</a></td>
 <td><strong>The caloron correspondence and higher string classes for loop groups</strong><br> (with M.K. Murray)<br> <em>J. Geom. Phys.</em> <strong>60</strong>(9) (2010), pp. 1235-1250.</td>
 <td><a href="http://arxiv.org/abs/0911.3464">arXiv:0911.3464</a><br> <a href="http://dx.doi.org/10.1016/j.geomphys.2010.04.010">journal</a></td>
 </tr>
@@ -479,7 +479,7 @@ kbd {
 
 <tbody>
 <tr>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/Online_assessment_strategies_2021.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/Online_assessment_strategies_2021.pdf">pdf</a></td>
 <td><strong>Don&#39;t throw the student out with the bathwater: online assessment strategies your class won&#39;t hate</strong> <br>(with S. Johnson, J. Maclean, A. Koerber &amp; M. Humphries)<br> <em>International Journal of Mathematical Eduation in Science and Technoloogy</em> (2022) 53(3), 627–638</td>
 <td><a href="https://doi.org/10.1080/0020739X.2021.1998687">journal</a></td>
 </tr>
@@ -500,16 +500,16 @@ kbd {
 
 <tbody>
 <tr>
-<td><strong>An assessment of peer instruction in large first year mathematics courses</strong><br> (with S. Johnson &amp; J. Tuke)</td>
+<td><strong>Active Learning at Scale: Investigating the Benefits of Peer Instruction in Undergraduate Mathematics</strong><br> (with S. Johnson, J. Tuke &amp; T. Evans)</td>
 <td><a href="https://arxiv.org/abs/2405.14151">arXiv:2405.14151</a></td>
 </tr>
 <tr>
 <td><strong>A scaffolded approach to introducing the definition of convergence of a sequence: from concept image to concept definition</strong></td>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/convergence.of.sequences.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/convergence.of.sequences.pdf">pdf</a></td>
 </tr>
 <tr>
 <td><strong>An interactive tool for visualising eigenvectors and eigenvalues</strong></td>
-<td><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/Files/visualising.eigenvectors.pdf">pdf</a></td>
+<td><a href="http://raymondvozzo.github.io/Files/visualising.eigenvectors.pdf">pdf</a></td>
 </tr>
 <tr>
 <td><strong>Rigid models for 2-gerbes I: Chern-Simons geometry</strong><br>(with D.M. Roberts)</td>
