--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>recipes</title>
+<title>raymond_vozzo's_homepage</title>
 
 
 <style type="text/css">
@@ -320,6 +320,9 @@ kbd {
 	pre {
 		word-wrap: break-word;
 	}
+  body {
+    padding: 2cm; 
+  }
 }
 </style>
 
@@ -328,15 +331,196 @@ kbd {
 
 <body>
 
-<h2 id="toc_0">Nonna&#39;s Recipes</h2>
+<h2 id="toc_0">Raymond Vozzo&#39;s Homepage</h2>
+
+<p><img style="float: right;" src="http://raymondvozzo.github.io/Files/image_1md.jpg"></p>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th>Contact details</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><em>Phone:</em></td>
+<td>+61 8 8313 5080</td>
+</tr>
+<tr>
+<td><em>email:</em></td>
+<td>raymond (dot) vozzo (at) adelaide.edu.au</td>
+</tr>
+<tr>
+<td><em>Office:</em></td>
+<td>Room 6.42, Ingkarni Wardli Building</td>
+</tr>
+<tr>
+<td><em>Address:</em></td>
+<td>School of Computer &amp; Mathematical Sciences<br> University of Adelaide<br> South Australia, 5005</td>
+</tr>
+</tbody>
+</table>
+
+<p>I am a Senior Lecturer at the University of Adelaide (soon to be Adelaide University!).</p>
+
+<p>I’m interested in differential geometry and mathematical physics. In particular, my research has been focussed on bundle gerbes and infinite-dimensional geometry, and applications to quantum field theory and string theory.</p>
+
+<p>I also have an interest in mathematical education. You can find links below to my papers in mathematics and education.</p>
+
+<hr>
+
+<h3 id="toc_1">Some useful links:</h3>
 
 <ul>
-<li><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/recipes/Cake1.jpg">Cake (page 1)</a></li>
-<li><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/recipes/Cake2.jpg">Cake (page 2)</a></li>
-<li><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/recipes/Custard(Creme!).jpg">Custard</a></li>
-<li><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/recipes/PastieraRiso.png">Pastiera Riso</a></li>
-<li><a href="http://www.maths.adelaide.edu.au/raymond.vozzo/recipes/zeppole">Zeppole</a></li>
+<li>My recent <a href="http://www.ams.org/mathscinet/search/publications.html?pg1=INDI&amp;s1=900954">papers</a> on MathSciNet (subscription required)</li>
+<li>My recent <a href="https://arxiv.org/a/vozzo_r_1.html">preprints</a> on the arXiv
+<!--+ A copy of my [CV](http://www.maths.adelaide.edu.au/raymond.vozzo/Files/CV.pdf)--></li>
+<li>Back to the <a href="http://www.maths.adelaide.edu.au">School of Mathematical Sciences</a></li>
+<li>Some of the expository tools I have created using Geogebra:
+
+<ul>
+<li><a href="https://www.geogebra.org/m/hEbeDxsD">Powers of complex numbers</a> (move a point around the complex plane and see how the square, inverse, etc. move around relative to it)</li>
+<li><a href="https://www.geogebra.org/m/rxuxegqp">Eigenvectors and eigenvalues</a> (vary the entries in a 2x2 matrix and see the effect of the corresponding linear transformation and see the eigenspaces)</li>
+<li><a href="https://www.geogebra.org/m/eGxs6pKy">Quadric surfaces</a> (investigate the various quadric surfaces using cross sections)</li>
+<li><a href="https://www.geogebra.org/m/njqedqnh">Taylor Polynomials</a> (enter a function, choose the order and view the polynomial and the error)</li>
+<li><a href="https://www.geogebra.org/m/aprjedck">Indefinite integrals and antiderivatives</a> (enter a function and see how the signed area corresponds to the indefinite integral)</li>
+<li><a href="https://www.geogebra.org/m/XtDhw73h">Tangents to curves on surfaces</a> (enter a surface and move along a curve on the surface and see the tangent to that curve)</li>
+<li><a href="https://www.geogebra.org/m/Hud6Hnpk">Partial derivatives and tangent planes</a> (enter a function and see the cross sections that give rise to the partial derivatives and see the tangent plane)</li>
+<li><a href="https://www.geogebra.org/m/ghxrg2pg">The blancmange function</a> (shows the construction of the blancmange function; a continuous function that is nowhere differentiable)</li>
+</ul></li>
 </ul>
+
+<hr>
+
+<h2 id="toc_2">Publications</h2>
+
+<h3 id="toc_3">Mathematics</h3>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><a href="https://link.springer.com/epdf/10.1007/s00220-020-03831-z?sharing_token=-0HfFu4XJywzS-tU9Vrb9fe4RwlQNchNByi7wbcMAY6rmIoqQpSP-fQRAMU8vY560WmF2Pbv8zSYOBMvEV70wP1Ll6q4iKX-WeCsgAOFnsTFA7A5qYEQqdQzJpU2UTyl-p3A2_rLH4dfhSxtdvtLXH8ZevskCJYDHTQ9XZLMzCQ%3D">pdf</a></td>
+<td><strong>Sign choices for orientifolds</strong> <br>(with P. Hekmati, M.K. Murray &amp; R.J. Szabo)<br> <em>Comm. Math. Phys.</em> (2020)</td>
+<td><a href="https://arxiv.org/abs/1905.06041">arXiv:1905.06041</a> <br> <a href="https://doi.org/10.1007/s00220-020-03831-z">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Real_bundle_gerbes_2019.pdf">pdf</a></td>
+<td><strong>Real bundle gerbes, orientifolds and twisted KR-homology</strong><br>(with P. Hekmati, M.K. Murray &amp; R.J. Szabo)<br><em>Adv. Theor. Math. Phys.</em> <strong>23</strong>(8) (2019), pp. 2093-2159.</td>
+<td><a href="http://arxiv.org/abs/1608.06466">arXiv:1608.06466</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Smooth_loop_stacks_2018.pdf">pdf</a></td>
+<td><strong>Smooth loop stacks of differentiable stacks and gerbes</strong><br>(with D.M. Roberts)<br><em>Cah. Topol. Géom. Différ. Catég.</em> Vol LIX no 2 (2018) pp 95-141.</td>
+<td><a href="http://arxiv.org/abs/1602.07973">arXiv:1602.07973</a><br> <a href="http://cahierstgdc.com/index.php/volume-lix-2018/">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Equivariant_bundle_Gerbes_2017.pdf">pdf</a></td>
+<td><strong>Equivariant bundle gerbes</strong><br> (with M.K. Murray, D. Stevenson &amp; D.M. Roberts)<br><em>Adv. Theor. Math. Phys.</em> <strong>21</strong>(4) (2017), pp. 921-975.</td>
+<td><a href="http://arxiv.org/abs/1506.07931">arXiv:1506.07931</a><br> <a href="http://dx.doi.org/10.4310/ATMP.2017.v21.n4.a3">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Smooth_hom_stack_2018.pdf">pdf</a></td>
+<td><strong>The smooth Hom-stack of an orbifold</strong><br>(with D.M. Roberts)<br>n: Wood D., de Gier J., Praeger C., Tao T. (eds) 2016 MATRIX Annals. MATRIX Book Series, vol 1. Springer, pp.43-47.</td>
+<td><a href="http://arxiv.org/abs/1610.05904">arXiv:1610.05904</a><br> <a href="https://doi.org/10.1007/978-3-319-72299-3_3">book series</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Odd_diff_K_2015.pdf">pdf</a></td>
+<td><strong>A Geometric Model for Odd Differential K-theory</strong><br> (with P. Hekmati, M.K. Murray &amp; V. Schlegel)<br><em>Differential Geom. Appl.</em> <strong>40</strong> (2015), pp. 123-158.</td>
+<td><a href="http://arxiv.org/abs/1309.2834">arXiv:1309.2834</a><br> <a href="http://dx.doi.org/10.1016/j.difgeo.2015.02.001">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/FMS_2013.pdf">pdf</a></td>
+<td><strong>The Faddeev-Mickelsson-Shatashvili anomaly and lifting bundle gerbes</strong><br>(with P. Hekmati, M.K. Murray &amp; D. Stevenson)<br> <em>Comm. Math. Phys.</em> <strong>319</strong>(2) (2013), pp. 379-393.</td>
+<td><a href="http://arxiv.org/abs/1112.1752">arXiv:1112.1752</a><br> <a href="http://dx.doi.org/10.1007/s00220-012-1608-7">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/General_caloron_2012.pdf">pdf</a></td>
+<td><strong>The general caloron correspondence</strong><br> (with P. Hekmati &amp; M.K. Murray,)<br> <em>J. Geom. Phys.</em> <strong>62</strong>(2) (2012), pp. 224-241.</td>
+<td><a href="http://arxiv.org/abs/1105.0805">arXiv:1105.0805</a><br> <a href="http://dx.doi.org/10.1016/j.geomphys.2011.10.015">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Equivariant_cohomology_2011.pdf">pdf</a></td>
+<td><strong>Loop groups, string classes and equivariant cohomology</strong><br> <em>J. Aust. Math. Soc.</em> <strong>90</strong>(1) (2011), pp. 109-127.</td>
+<td><a href="http://arxiv.org/abs/1005.4243">arXiv:1005.4243</a><br> <a href="http://dx.doi.org/10.1017/S1446788711001066">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Circle_actions_2010.pdf">pdf</a></td>
+<td><strong>Circle actions, central extensions and string structures</strong><br> (with M.K. Murray)<br> <em>Int. J. Geom. Methods Mod. Phys.</em> <strong>7</strong>(6) (2010), pp. 1065-1092.</td>
+<td><a href="http://arxiv.org/abs/1004.0779">arXiv:1004.0779</a><br> <a href="http://dx.doi.org/10.1142/S0219887810004725">journal</a></td>
+</tr>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Caloron_correspondence_2010.pdf">pdf</a></td>
+<td><strong>The caloron correspondence and higher string classes for loop groups</strong><br> (with M.K. Murray)<br> <em>J. Geom. Phys.</em> <strong>60</strong>(9) (2010), pp. 1235-1250.</td>
+<td><a href="http://arxiv.org/abs/0911.3464">arXiv:0911.3464</a><br> <a href="http://dx.doi.org/10.1016/j.geomphys.2010.04.010">journal</a></td>
+</tr>
+</tbody>
+</table>
+
+<h3 id="toc_4">Education</h3>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><a href="http://raymondvozzo.github.io/Files/Online_assessment_strategies_2021.pdf">pdf</a></td>
+<td><strong>Don&#39;t throw the student out with the bathwater: online assessment strategies your class won&#39;t hate</strong> <br>(with S. Johnson, J. Maclean, A. Koerber &amp; M. Humphries)<br> <em>International Journal of Mathematical Eduation in Science and Technoloogy</em> (2022) 53(3), 627–638</td>
+<td><a href="https://doi.org/10.1080/0020739X.2021.1998687">journal</a></td>
+</tr>
+</tbody>
+</table>
+
+<hr>
+
+<h3 id="toc_5">Preprints</h3>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><strong>Active Learning at Scale: Investigating the Benefits of Peer Instruction in Undergraduate Mathematics</strong><br> (with S. Johnson, J. Tuke &amp; T. Evans)</td>
+<td><a href="https://arxiv.org/abs/2405.14151">arXiv:2405.14151</a></td>
+</tr>
+<tr>
+<td><strong>A scaffolded approach to introducing the definition of convergence of a sequence: from concept image to concept definition</strong></td>
+<td><a href="http://raymondvozzo.github.io/Files/convergence.of.sequences.pdf">pdf</a></td>
+</tr>
+<tr>
+<td><strong>An interactive tool for visualising eigenvectors and eigenvalues</strong></td>
+<td><a href="http://raymondvozzo.github.io/Files/visualising.eigenvectors.pdf">pdf</a></td>
+</tr>
+<tr>
+<td><strong>Rigid models for 2-gerbes I: Chern-Simons geometry</strong><br>(with D.M. Roberts)</td>
+<td><a href="https://arxiv.org/abs/2209.05521">arXiv:2209.05521</a></td>
+</tr>
+<tr>
+<td><strong>Loop Groups, Higgs Fields and Generalised String Classes</strong><br> Ph.D. Thesis</td>
+<td><a href="http://arxiv.org/abs/0906.4843">arXiv:0906.4843</a></td>
+</tr>
+</tbody>
+</table>
 
 
 
