--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ kbd {
 
 <h2 id="toc_0">Raymond Vozzo&#39;s Homepage</h2>
 
-<p><img style="float: right;" src="http://raymondvozzo.github.io/Files/image_1.jpg"></p>
+<p><img style="float: right;" src="http://raymondvozzo.github.io/Files/image_1md.jpg"></p>
 
 <table>
 <thead>
