--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ kbd {
 <li><a href="https://www.geogebra.org/m/XtDhw73h">Tangents to curves on surfaces</a> (enter a surface and move along a curve on the surface and see the tangent to that curve)</li>
 <li><a href="https://www.geogebra.org/m/Hud6Hnpk">Partial derivatives and tangent planes</a> (enter a function and see the cross sections that give rise to the partial derivatives and see the tangent plane)</li>
 <li><a href="https://www.geogebra.org/m/ghxrg2pg">The blancmange function</a> (shows the construction of the blancmange function; a continuous function that is nowhere differentiable)</li>
+<li><a href="https://www.geogebra.org/m/rshtdbav">Convergence of sequences</a> (enter a sequence and choose a value of epsilon to see the terms that are within epsilon of the limit)</li>
+<li><a href="https://www.geogebra.org/m/pjcukdu9">Newton&#39;s method</a> (enter a function and choose an initial estimate for the zero; then choose how many iterations of Newton&#39;s method to show and see the tangents and the sequence of estimates for the zero)</li>
 </ul></li>
 </ul>
 
