--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@ kbd {
 
 <p>I am a Senior Lecturer at the University of Adelaide (soon to be Adelaide University!).</p>
 
-<p>I’m interested in differential geometry and mathematical physics. In particular, my research has been focussed on bundle gerbes and infinite-dimensional geometry, and applications to quantum field theory and string theory.</p>
+<p>I’m interested in differential geometry and mathematical physics. In particular, my research has been focussed on bundle gerbes and infinite-dimensional geometry, and applications to quantum field theory and string theory. I also have an interest in mathematics education. </p>
 
-<p>I also have an interest in mathematical education. You can find links below to my papers in mathematics and education.</p>
+<p>You can find links below to my papers in mathematics and education, as well as a list of graduate students I have supervised, together with their theses.</p>
 
 <hr>
 
@@ -376,8 +376,8 @@ kbd {
 <ul>
 <li>My recent <a href="http://www.ams.org/mathscinet/search/publications.html?pg1=INDI&amp;s1=900954">papers</a> on MathSciNet (subscription required)</li>
 <li>My recent <a href="https://arxiv.org/a/vozzo_r_1.html">preprints</a> on the arXiv
-<!--+ A copy of my [CV](http://www.maths.adelaide.edu.au/raymond.vozzo/Files/CV.pdf)--></li>
-<li>Back to the <a href="http://www.maths.adelaide.edu.au">School of Mathematical Sciences</a></li>
+<!--+ A copy of my [CV](http://www.maths.adelaide.edu.au/raymond.vozzo/Files/CV.pdf)-->
+<!--+ Back to the [School of Mathematical Sciences](http://www.maths.adelaide.edu.au)--></li>
 <li>Some of the expository tools I have created using Geogebra:
 
 <ul>
@@ -411,8 +411,13 @@ kbd {
 
 <tbody>
 <tr>
+<td></td>
+<td><strong>Rigid models for 2-gerbes I: Chern-Simons geometry</strong><br>(with D.M. Roberts)<br>To appear in <em>Journal of Homotopy and Related Structures</em></td>
+<td><a href="https://arxiv.org/abs/2209.05521">arXiv:2209.05521</a></td>
+</tr>
+<tr>
 <td><a href="https://link.springer.com/epdf/10.1007/s00220-020-03831-z?sharing_token=-0HfFu4XJywzS-tU9Vrb9fe4RwlQNchNByi7wbcMAY6rmIoqQpSP-fQRAMU8vY560WmF2Pbv8zSYOBMvEV70wP1Ll6q4iKX-WeCsgAOFnsTFA7A5qYEQqdQzJpU2UTyl-p3A2_rLH4dfhSxtdvtLXH8ZevskCJYDHTQ9XZLMzCQ%3D">pdf</a></td>
-<td><strong>Sign choices for orientifolds</strong> <br>(with P. Hekmati, M.K. Murray &amp; R.J. Szabo)<br> <em>Comm. Math. Phys.</em> (2020)</td>
+<td><strong>Sign choices for orientifolds</strong> <br>(with P. Hekmati, M.K. Murray &amp; R.J. Szabo)<br> <em>Comm. Math. Phys.</em> (2020) <strong>378</strong>, pp. 1843–1873</td>
 <td><a href="https://arxiv.org/abs/1905.06041">arXiv:1905.06041</a> <br> <a href="https://doi.org/10.1007/s00220-020-03831-z">journal</a></td>
 </tr>
 <tr>
@@ -514,12 +519,52 @@ kbd {
 <td><a href="http://raymondvozzo.github.io/Files/visualising.eigenvectors.pdf">pdf</a></td>
 </tr>
 <tr>
-<td><strong>Rigid models for 2-gerbes I: Chern-Simons geometry</strong><br>(with D.M. Roberts)</td>
-<td><a href="https://arxiv.org/abs/2209.05521">arXiv:2209.05521</a></td>
-</tr>
-<tr>
 <td><strong>Loop Groups, Higgs Fields and Generalised String Classes</strong><br> Ph.D. Thesis</td>
 <td><a href="http://arxiv.org/abs/0906.4843">arXiv:0906.4843</a></td>
+</tr>
+</tbody>
+</table>
+
+<hr>
+
+<h2 id="toc_6">Graduate Students</h2>
+
+<p>Below is a list of past and current Higher Degree by Research students I have supervised, along with links to their theses.</p>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td>Sam Groocock<br> (with David Roberts)</td>
+<td>MPhil current</td>
+<td></td>
+</tr>
+<tr>
+<td>Alex Marciano<br> (with Danny Stevenson)</td>
+<td>MPhil current</td>
+<td></td>
+</tr>
+<tr>
+<td>Matthew Drown<br> Thesis: <em>Classifying spaces and simplicial groupoids</em> <br>(with Danny Stevenson)</td>
+<td>MPhil 2025</td>
+<td><a href="https://librarysearch.adelaide.edu.au/permalink/61ADELAIDE_INST/rinku3/alma9928619680101811">Thesis</a></td>
+</tr>
+<tr>
+<td>James McCusker<br> Thesis: <em>Higher differential geometry and non-integral Kac-Moody extensions</em> <br>(with Danny Stevenson)</td>
+<td>MPhil 2024</td>
+<td><a href="https://librarysearch.adelaide.edu.au/permalink/61ADELAIDE_INST/rinku3/alma9928491265901811">Thesis</a></td>
+</tr>
+<tr>
+<td>Liam Stoldt<br> Thesis: <em>Equivariant bundle gerbes and simplicial extensions</em> <br>(with Danny Stevenson)</td>
+<td>MPhil 2022</td>
+<td><a href="https://librarysearch.adelaide.edu.au/permalink/61ADELAIDE_INST/rinku3/alma9928283257601811">Thesis</a></td>
 </tr>
 </tbody>
 </table>
